# DBMA

./: .gitignore  AUTHOR.md  LICENSE  README.md  config.py  main.py  pyproject.toml  requirements.txt  setup.py  simple_cli.py
core/: PostgreSQL-Data-1.sql  agent.py  mysql_manager.py  persistence.py  query_executor.py
database/: schema.sql
database/migrations/: 001_initial.sql
ui/: dbma.tcss  tui.py
utils/: helpers.py  logger.py
